# pathfinder

./: .travis.yml  Cargo.toml
builder/: Cargo.toml
builder/src/: lib.rs
c/src/: lib.rs
canvas/src/: lib.rs
content/: Cargo.toml
content/src/: clip.rs  dilation.rs  lib.rs  outline.rs  pattern.rs  segment.rs  stroke.rs
demo/common/: Cargo.toml
demo/common/src/: lib.rs  renderer.rs  ui.rs
demo/native/src/: main.rs
examples/canvas_glutin_minimal/src/: main.rs
examples/canvas_metal_minimal/src/: main.rs
examples/canvas_minimal/src/: main.rs
examples/canvas_moire/src/: main.rs
examples/canvas_nanovg/src/: main.rs
examples/canvas_text/src/: main.rs
examples/swf_basic/src/: main.rs
export/: Cargo.toml
export/src/: lib.rs  raster.rs
geometry/: Cargo.toml
geometry/src/: line_segment.rs
gl/: Cargo.toml
gl/src/: lib.rs
gpu/: Cargo.toml
gpu/src/: lib.rs  resources.rs
metal/src/: lib.rs
renderer/: Cargo.toml
renderer/src/: builder.rs  gpu_data.rs  lib.rs  options.rs  scene.rs  sorted_vector.rs  tiler.rs  tiles.rs
renderer/src/gpu/: debug.rs  mem.rs  mod.rs  options.rs  perf.rs  renderer.rs  shaders.rs
resources/: Cargo.toml  MANIFEST  build.rs
resources/shaders/gl3/: blit.fs.glsl  tile.vs.glsl  tile_clip.vs.glsl
resources/shaders/gl4/: bin.cs.glsl  blit.vs.glsl  blit_buffer.fs.glsl  blit_buffer.vs.glsl  dice.cs.glsl  fill.cs.glsl  init.cs.glsl  propagate.cs.glsl  sort.cs.glsl  tile.cs.glsl  tile.fs.glsl  tile.vs.glsl  tile_clip.fs.glsl
resources/shaders/metal/: bin.cs.metal  blit.vs.metal  blit_buffer.fs.metal  blit_buffer.vs.metal  dice.cs.metal  fill.cs.metal  init.cs.metal  propagate.cs.metal  sort.cs.metal  tile.cs.metal  tile.fs.metal  tile.vs.metal  tile_clip.vs.metal
shaders/: Makefile  bin.cs.glsl  blit.fs.glsl  blit.vs.glsl  blit_buffer.fs.glsl  blit_buffer.vs.glsl  dice.cs.glsl  fill.cs.glsl  fill.vs.glsl  init.cs.glsl  propagate.cs.glsl  sort.cs.glsl  tile.cs.glsl  tile.fs.glsl  tile.vs.glsl  tile_vertex.inc.glsl
simd/src/scalar/: mod.rs
svg/: Cargo.toml
ui/src/: lib.rs
utils/svg-to-skia/: Cargo.toml
webgl/: Cargo.toml
webgl/src/: lib.rs
