[package]
name = "pathfinder_resources"
version = "0.5.0"
edition = "2018"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
description = "Shaders, textures, etc. for the Pathfinder vector graphics library"
license = "MIT/Apache-2.0"
repository = "https://github.com/servo/pathfinder"
homepage = "https://github.com/servo/pathfinder"

[features]
gl3_shaders = []
metal_shaders = []
fonts = []
debug-fonts = []
svg = []
textures_lut = []
textures_demo = []
textures_debug = []

[dependencies.pathfinder_log]
path = "../log"