[package]
name = "pathfinder_webgl"
version = "0.1.0"
edition = "2018"
authors = ["Sebastian Köln <s3bk@protonmail.com>"]

[dependencies]
wasm-bindgen = "*"

[dependencies.image]
version = "0.21"
default-features = false
features = ["png_codec"]

[dependencies.log]
version = "0.4"
features = ["release_max_level_warn"]

[dependencies.pathfinder_geometry]
path = "../geometry"

[dependencies.pathfinder_gpu]
path = "../gpu"

[dependencies.pathfinder_renderer]
path = "../renderer"

[dependencies.pathfinder_simd]
path = "../simd"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlFramebuffer',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'WebGlTexture',
  'WebGlProgram',
  'WebGlVertexArrayObject',
  'Window',
]